# FakeChess

./: CMakeLists.txt  FakeChess.rc  LICENSE  README.md
source/: AIPlayer.cpp  AIPlayer.hpp  Application.cpp  Application.hpp  BFS.cpp  BFS.hpp  Field.cpp  Field.hpp  FieldCell.cpp  FieldCell.hpp  FieldCoords.hpp  FieldElement.cpp  FieldElement.hpp  FieldFigure.cpp  FieldFigure.hpp  Game.cpp  Game.hpp  Log.cpp  Log.hpp  Main.cpp
